# ChangeLog for dev-vcs/svn2git
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/svn2git/ChangeLog,v 1.23 2015/03/30 14:54:59 sping Exp $

  30 Mar 2015; Sebastian Pipping <sping@gentoo.org>
  svn2git-0_pre20100303.ebuild, svn2git-0_pre20100324.ebuild,
  svn2git-0_pre20100327.ebuild, svn2git-0_pre20101008.ebuild,
  svn2git-0_pre20101101.ebuild, svn2git-1.0.2.1.ebuild,
  svn2git-1.0.3_p1.ebuild, svn2git-1.0.4.ebuild, svn2git-1.0.5.ebuild,
  svn2git-1.0.6.ebuild, svn2git-1.0.8-r1.ebuild, svn2git-1.0.10.ebuild,
  svn2git-9999.ebuild:
  Use off-Gitorious mirror for tarballs (bug #544844)

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  svn2git-0_pre20100303.ebuild, svn2git-0_pre20100324.ebuild,
  svn2git-0_pre20100327.ebuild, svn2git-0_pre20101008.ebuild,
  svn2git-0_pre20101101.ebuild, svn2git-1.0.10.ebuild, svn2git-1.0.2.1.ebuild,
  svn2git-1.0.3_p1.ebuild, svn2git-1.0.4.ebuild, svn2git-1.0.5.ebuild,
  svn2git-1.0.6.ebuild, svn2git-1.0.8-r1.ebuild, svn2git-9999.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*svn2git-1.0.10 (21 May 2013)

  21 May 2013; Sebastian Pipping <sping@gentoo.org> +svn2git-1.0.10.ebuild,
  +files/svn2git-1.0.10-version.patch:
  Bump to 1.0.10, stop the version patch madness

  09 May 2013; Sebastian Pipping <sping@gentoo.org> -svn2git-1.0.8.ebuild:
  Remove 1.0.8 due to the UTF-8 bug fixed in 1.0.8-r1

*svn2git-1.0.8-r1 (08 May 2013)

  08 May 2013; Sebastian Pipping <sping@gentoo.org> +svn2git-1.0.8-r1.ebuild,
  +files/svn2git-1.0.8-utf8-author-names.patch:
  Fix use of UTF-8 author names in identity maps

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org>
  svn2git-0_pre20100303.ebuild, svn2git-0_pre20100324.ebuild,
  svn2git-0_pre20100327.ebuild, svn2git-0_pre20101008.ebuild,
  svn2git-0_pre20101101.ebuild, svn2git-1.0.2.1.ebuild, svn2git-1.0.3_p1.ebuild,
  svn2git-1.0.4.ebuild, svn2git-1.0.5.ebuild, svn2git-1.0.6.ebuild,