@@ -24,25 +24,25 @@ DIST svn2git-1.0.4.tar.gz 24190 SHA256 7fab1935ea7101c1c39085b3333f9d9eaa88e5d3f
 DIST svn2git-1.0.5.tar.gz 25677 SHA256 e6f4794f5a22044cbbb89feedaf5b1179d94b6b142df5875cdb2876819e47224 SHA512 594b70651a0c97668822adf456f9ac7f1ce814c53dabcd39efbb2fd85d63d6a4be7e708db3560234078e2dc6084ea99ccf0c4fb363c7b4864d37d4b5fb53d18f WHIRLPOOL 1ec1de336de26fa8d235ccc3b039598b8b5128b95f15af1b04c5fd79ba753ac3b02aa09d8feadf6c7ecfcfaf0fd48bc7e56fdee51d77e29909b1fefe26cfa76f
 DIST svn2git-1.0.6.tar.gz 25791 SHA256 273f2199115414bcfb454d18f2200a7f3d536da11c4ed78f9fbae354af742a7d SHA512 9f887a9085c4a3a5210e4c49cde2a326eaa92e2426ffe0842daf5a05e3b1133c4566a00b719bf04c9e6b8a31d3eaa56e75395ec732a75ce6700bc4d22e6979d7 WHIRLPOOL c6547de760f5097663d8cc3705a156540278b4d1a6892021a7292e7cbfad274cfe144c1eab886c0cae773cfb932ab60b1f6a51294aeaaebaeefb68c1eb1d0ea5
 DIST svn2git-1.0.8.tar.gz 26667 SHA256 ba66e9ad88a23acb65cf56661dd7ca81cfb5b429bb2349278dc8906c0239a4c2 SHA512 a6c5eb87cebf98404f0579f9ca9ab8f565dfd2bac2ca7824f964a73ebcfb362688bc5149a7c2e2d152ff5e28b84cc1b1deb2fdca1bceabbeed25f6d2c27a4a8d WHIRLPOOL c36ac03378048a6117d1c47ada993477f5d2822a40c7a2850e0a356753bfc003fbaef8477a8e9849fc752432cdb369cffacc1c38bbe6d7e0434e8a07a71196a4
-EBUILD svn2git-0_pre20100303.ebuild 1043 SHA256 3ae263006c27be10b88c2b38a0b0c7816e7b1a28bcf65456ebbcbfa0671fa8bf SHA512 16dd15e79a4f81f54d03b8d56fd83d49dea2ef740da21e561940099e1faeaf8131201de004a4d38ac322acc37767c36e38d0e3c502a99b9a59884235c92f142c WHIRLPOOL df0cc4cfa575ee38dcb0da20e6130a1d9b6b5567a87b0d186a4ff992bfcf80251665644e23170e480c58b7a8fae2fd30a1bf75ec14430125bda2efe2d7af9834
-EBUILD svn2git-0_pre20100324.ebuild 1043 SHA256 f1ed0c7ef7b039b255eedc6bf97a649930e47b9db248ce71465be68ea98e5464 SHA512 e18208fbc5148e94102046f7c1723648a2343db384eca623d8d67171ce6c881a72056d6245c16fbd749bfd958725ccde4a8d6b6c44d15181169f18bc275f026d WHIRLPOOL 27834225a677cd918a934f64c4a51d68c5877f91364402334849b38b77f834db2509381d530b60a54fdd6b53323b3df5a84b48601c3b187ac087db84528df31c
-EBUILD svn2git-0_pre20100327.ebuild 1043 SHA256 08e17388e9bb5b561aaba6f1430527ffa62e78713c3726d7627796f625fd90d4 SHA512 a9bd65cb49398f50c0f25c62f1232f49b59bbf95a4f7feb37cf2aaf18fa1204b02949dc97fb41042d651363f24893aec75cd56cc5aae9f6b9b150d5f4dd23bc7 WHIRLPOOL 132aaed1ed135c87dfc7e9cf44548efdfe83d2c0250cbe72bce57b2491d9a2a8c23481e46957ebab5e4e0582efb882ce89c49af6bc9dd3a9b3c442aba3b4ffa1
-EBUILD svn2git-0_pre20101008.ebuild 1043 SHA256 dfb855ba574dcbb4c4064f09111e36532f4f7a43c0f7ad21a2c758338ac06d29 SHA512 82a96b6fafe2b7a4dfa1108862d1c4ad14c68becc324daace23066510f71be2c43556f2e143bfe3a5771c0ba8a0138aa004200ab46088d48fb96681205661f2f WHIRLPOOL 526340a9cafddfcb08feac722608b0d730e9403358026800408424edf51ebba05361df61fc83ab9d47bf74fbaae47a87853bf5f3a1ac942b56fb1e2b22eba86f
-EBUILD svn2git-0_pre20101101.ebuild 1043 SHA256 6f21e77311fa50c7a812c95a35df2ffb8fa34b24ec07f35a6d7c585f0dc727c3 SHA512 d33bddff4efdd6655a71cd5f2128af916dc0ed5a961594b746eba1dcca18d196b3b308ab5390cbde573ac9193d4fa0bafdbdcb9de841925bc99a7db6f5779de6 WHIRLPOOL 45f46320f84c1d314b08b7cfe13e2c9eefa489c2eb9d4de7c4004b42ee15388ea1c3e9380351b7a859dd8673f11cdb5e9bc9fedf29c12db766db1bd2763a00c9
-EBUILD svn2git-1.0.10.ebuild 1226 SHA256 94f62a0ecc26a33596a25dca31f35b7978a998979b7945999b2bf11f4e94a8c9 SHA512 83d441ac42f046c4d93d354d0a05cb7b06bdd047ec4d632e1d6ff4bbcee765f8bf19df9b9937484b3840b5586226c35ed2a019dba0a3378999f8e4f4a0d3b068 WHIRLPOOL 7a175de208dcaa52e15552cba45f870ff9ca9a3ef67ab9a9e829c001b932e0c0c679d8ea47f8ab92b57902af128076ec602c7d405377b13001636fd876834168
-EBUILD svn2git-1.0.2.1.ebuild 1177 SHA256 68287eadbd5ecb5d0a2f13e6c83928b837d3be1940196d49b3b537c5b363a590 SHA512 5cfc7f9f057226b496b84e953144fed0c4886c069f5d9cfa419404f78b4b4c78b565ec18a966fc667f520f9127b9f26add024115c45304ceae8b6c38808def11 WHIRLPOOL 2d9efadb9dd11be4835097f2d43361023f4b0d028bf471cf86b6ab04b5ee68841b2dbfd371bddf33a68df0697ed3e33bca54957aa51d703a799f5d0f6455eee3
-EBUILD svn2git-1.0.3_p1.ebuild 1284 SHA256 405b0f2d7acc984f5402e9c08fc47239ce6327e62c1d1eda2aec3ea4466a7ba9 SHA512 c8b04276daf74fc73179d00d63adb36bf784b2beef87d33a6420c8d56b9d4ae58ce98d34c967cda5b99f9161b6d10f9a903ec5bbe372de6c6a3f0356f326f13c WHIRLPOOL 0df49ac9c01f91813487b6aed9777d7e1c0036f026a643e7af52f4836b4e413b02707df281d3763d82d6cc141405477a0874a7362d64cf5f28cab81e4a52bedf
-EBUILD svn2git-1.0.4.ebuild 1161 SHA256 f43db7761510f85c1678c5affcfbe2a670e0de88d9673f13a6dc92f49ac0e653 SHA512 1680612ae95eef5064949cb40f5261cf2a657ca0fb7c64bd13874779df71991ec73f541ba4a30d396499dcde3c6f486300bfa18d22ef4242a8d9e0074c3e3ff8 WHIRLPOOL 976eb896187a43d88cbe60650086df26e8f6b6bfb64bd3c28f58087da8e4f9234147fb4dbcdd889ebe67a6c8ae29f79f85c1804c0c5dc59bdddf15ccfb302dc2
-EBUILD svn2git-1.0.5.ebuild 1154 SHA256 ccc7ce1b251e10265e425c504b20088922af26d1c812e4d1484054401e6be905 SHA512 ea700de020e83c4eaca3c0e89ee1ab111d2af74bc0b94082b820aec165bde466fda868194e69f4413fceec8c1b89e19e58e82209a68bdffaf558349f2ffa29ca WHIRLPOOL 20500c98ab9b89fddc9683c0312c14de872b9315312e846878a5a40fd1f60579c6de68e997259df4cde07cd3db68e2c386efda752072793a97644be0f364fc5a
-EBUILD svn2git-1.0.6.ebuild 1154 SHA256 5112cee8e8a0a9bea98099d5d6c66497ffe44ce22a93855a70e1284dc326f3c3 SHA512 c27c0835d292ef4d994ea51fab619979a4aac2d8011d06241bb3cf1cfa854c652f7c14480f9dd162a6761b63a4716168721f7677546f81b1a8214bab4717eb23 WHIRLPOOL 6e5f93bfa29175dadc82820f43f281628cb335b22bd72fa6f8d834e35d7412f5a6eada81c7bb53c6370e7f4cbe502b0682233b2d3c89714695114c1b520f9525
-EBUILD svn2git-1.0.8-r1.ebuild 1249 SHA256 7e0dbad362fcf3d010562ffd0d10ef2cc2827349b923338c56c38488d7690d33 SHA512 cf395475080c5c1c04118c3b5fa57c098e2c5c2f16d43b73c9ea4f112e17ef07792a0eed3d8485c57bf1376f0d283b8a43e7cdf777fb50efe3f1d0c92b3a8b40 WHIRLPOOL fd8404f9d90e115f15707b1cf8fdac6b7bc256825ad7048fadf58f6e529c6841c956617a4753545e81e8a992bb2d5afc9bb5c378f2d46ad4b2181724e05cd7e7
-EBUILD svn2git-9999.ebuild 1196 SHA256 ce12ffd9b8d37ec2c71564a0ad1d2ccf911d58c9800ebc5e3b12ee9ab30f7e64 SHA512 5d145196aa1ea440904a00230367cd8399273ea1b8cc6489c784e9b56cc599be8bb07908e35f08621d9cded81d7b9fdf4299fa954c779f52dd585c82c37e6f3c WHIRLPOOL ace3341d9fac64e55977caa312776d491694fd4c4ea88715e40d4fe0cd44a7dd3ae8242a0c524cdb45b650b1fbb814b0396906fd04be5e3564dd415e28e533e9
-MISC ChangeLog 5413 SHA256 c2a46630afabcb121ebf61f633634564a7196f455ab080932c605a60914e9e9b SHA512 8dfe153dab5abbb4da696f476cf452dfa1cc503727339e5f7eefcfd74ecb39bf8dba018051ef6c1890b8fc7f0f526858c0ac85c7005194c3ea5aa4d50b93ca0d WHIRLPOOL a55db81cab60bb76a633c1f3da327169e38c14d6c5d6f29ebb07ae00732ca6934cfcaa0dc2e0faf3f8de1922005904c47fbca25c6f253c7fb314b4f05b961df5
+EBUILD svn2git-0_pre20100303.ebuild 1064 SHA256 d725f8b10c83f86cdd1023b664143cb6a306009d50ccd8df971d42472ab31c5f SHA512 95230b4688d2a889784d0fc2f6234cbd3dc3b656142deefed0ecb7ead559572ed48dc1d6bf3c8d2e9a9353b49b70a15db9c0f3f723043f6e70e68fb446b6f2a1 WHIRLPOOL 2c117790945de17a57640e8877e4433b2766835b1ef41907e052e6cd394772618046567a22c3ab94fd20d80022e2b4475f635a7959d38ad0af7dbb458bbc56f9
+EBUILD svn2git-0_pre20100324.ebuild 1064 SHA256 848ce4ffc91535dbf9eb20d4bc89b14d7493c35ad03f575703cbe708c7ae4c6a SHA512 46f12c43593c2456ced4b1dd2fcd423da6cbd09f4fc440f1845e1d83cec9b893e6124309f4364ce14283fc8ba6900d313227e6aecccdc6ea944c3908a2573f10 WHIRLPOOL fb6762b33b5d0eff0e94c48d1165db953d7de1ea92c512d5d681d9f4e0301fe83f5c0b07b2519181386b36fa14885eb83b087df1c330e3e77530c2df810ed804
+EBUILD svn2git-0_pre20100327.ebuild 1064 SHA256 313c1580dfa52fcd5ba69659e8ffb96290f277ae9cde9f9d186ee8d24111beba SHA512 0b152740f2b20d4891464ad782e9e62339de62732ae46a7c3f60114d93aaa101789d27ab5fb4a020f225d0beba06b49e916089188d550067e75f41578d77c071 WHIRLPOOL ea1e3bd205544f6eea9534019cf6f51f15c78fb81fc2890346854c9660213f3d4df6d14c9b203a95749eca7d37ceb102c42d9fd5a15a72400d2743051a8fdcf4
+EBUILD svn2git-0_pre20101008.ebuild 1064 SHA256 f88858037cbb5021df56d8021de39d7d1046ce6fd21b6826de5eca5abc68cae5 SHA512 8f38730977a5220f330b82daa297ca82bfb062c17faa1f7e2ff1213803605073f140dc1b9d55de6aa4cf97cbc7b3ec7c494105c1da84335d2de764aec8e572ca WHIRLPOOL d714be5b834842a66b818a7cf48b0f95333860c58e060b7ffb007cdb58ad392c3455e52623c37031c2cb3de982b7c21e568cf6d1b0076d5c0d00653d5fd867cc
+EBUILD svn2git-0_pre20101101.ebuild 1064 SHA256 5fd3ca6cc8a1dae0a6920d182795e29539350f1f0526de4666330ce375c4dc47 SHA512 34062be65f6b9562815b5ca122ffc292a3c1b311a07f151c0ec402ff9cb8936fa64b2757cf3a4cfdcf4e396c6a5c751557e4270180d70bcc75720b7c3f913f7e WHIRLPOOL e8272a1d793ee5ea9063a7a940e49e63b3b5865c4e4d2cd72d6bf63fe3e82f2e1ff4ad98244e92a0f1b5b0c73758b8c288e90465c874128742e9b63b44733b5f
+EBUILD svn2git-1.0.10.ebuild 1247 SHA256 e387f068ce9d076733e4d78c2a68c49e0baa746b050c3c5f92e26796c9de9a0c SHA512 eead6d3988481eb7d6b7d809a62ce022e0dec21a7b43edde90be3988e3cec02e885a68809cfe68be703b4f6862b85e9e9d2e5416564f9748461e875110107305 WHIRLPOOL 5819d12b86f4960e4d77a4607e3a475465d00f529e88457fea0a11e5b6cce8d931e8819b5953eaf7929860c21b98b73b2031bf3ad22e53bc96d14e06fa37065f
+EBUILD svn2git-1.0.2.1.ebuild 1198 SHA256 870e0f545127edaff624d2caf84ba2d67d59ffe7b2ef32532c52f50f450307b7 SHA512 819cf5beb96c04921323173c025d6fea44aa8fc949ac872837d8e810ec445e40302148c03add3a77b31b3675b5cfbc49e8f14f3c56c7b5e237b259b843d106bd WHIRLPOOL b2f2d8b6300c4355feb10d6e8ebb70c7a117174e4e1f90dcf634cff88760ab74db426183c61805c6964873b87fee94205ef055716d1a37883c80079c27661d70
+EBUILD svn2git-1.0.3_p1.ebuild 1305 SHA256 8badf72c53a3d828dde3dc70e6711bb14cfe3b979e791b082549ae4014b90ddf SHA512 c7f0e07c4db596754299b01495086b8948706870254a1f79ede5c455b30a7dec6b2b726247012acd3745830cda9db530e35d180c18e0df01858a97995d71c199 WHIRLPOOL 0dbc5fdb812346939a7d03fbc9cba5fc6a924a633045e6296385b7d75dd1f65c12038d0a25989a40ca8644cfe5f2cfbcd84b236a87c683769c591fa1d1a32227
+EBUILD svn2git-1.0.4.ebuild 1182 SHA256 7c6e5388ad213f7360bd9542737d18ced7d69cb52d3bc71bdb73fc158c2ee692 SHA512 8d04ddb570be693b25dbe38599024fc3db793a79d06e174b2ee667947ca528893604f051c2f6fe31cfccf7e78770bca29e06a28d1cbc8f2922c94d80fb46bbd1 WHIRLPOOL 321baa6aa822c2abcf6c0d0ee871522e410391690e324bbddd87c17a17edeccc388f9077dc4fcb04f9d4cfafc5d4f6ef1aed9e45a80bc474f631d71ebea27631
+EBUILD svn2git-1.0.5.ebuild 1175 SHA256 9da4ad57e221ecb76b7973c09f8e865fce9cc47c562fd494755037df20dd8687 SHA512 a9c2c336683d01f7774a78b7fe436979932c0407ee62d3190a86191c9a89fc0b959e0fc576f3561d5bcf56934e68c7b330e631d8cf28a9561b277871de8aa7e1 WHIRLPOOL 1050564168bcea2af7c26b371b8b8c9bdd928b9c78583cb57ba5ef6d3a0cc7f1a23afd903a41abb5485b00e5aecc41bb9691931d7a5697f3daa42f29bea6982f
+EBUILD svn2git-1.0.6.ebuild 1175 SHA256 4c0fcd46e1bce07d0ccd3b4e6eacdd99a6bf68ee0052eba1efe1f2dbdc306f96 SHA512 01509ac8a403af4a225f08196c4b22dc6cbf68cafb64ce1c271dfb41dd3e5e54a621f62aca981ed1d6a21fe5b9ca4ddb767d7d6cacc65d7ad4fb1f88cacedb6f WHIRLPOOL bee809aebcc75c2ac55ab7e43502409e49bebe94ef6ba142be86dd3c6bc5b80c9ecd21ff1b83d052b2ecfe6941170aec0627e32fc06e304a7e0350fe42748e44
+EBUILD svn2git-1.0.8-r1.ebuild 1270 SHA256 8349ac210987eb8174014d1a9d68a8e526e26ed0626e06b7f5db3ddfe7fd2ce4 SHA512 a51820f31f67d2664631f2b17fbc03f8c77f4e2d24bbb6443cc915231d2b23c8f2d1b19d240659e78f113d6dc393eaaaee7fa274f20aa16081d96e268f3d8427 WHIRLPOOL d4069125eeb4bf5637f92ea570e810aace4a2333a78b3033b83992002573e9b1eba9f7260f05d48278a27fc30fa37747ca9548a574b7a54ff7e37b6837fc6cd9
+EBUILD svn2git-9999.ebuild 1177 SHA256 ab571eb59fdc1667a066506881a526d4a4f36c0fdcc8cd458682528aea222727 SHA512 e69ad89d4d1ad380334921c0e6305afed76dd7585ee1572798e41af817566ee079877c478d152dd41a7dd6bb6294d24b859397318836f936c9a080ddcf423275 WHIRLPOOL 6a233dce374710328df692856f20fa8247dc5d25c9582a1dcd8f69fa832dcdb4d6ebf2e31d1e087ab0c1054defa59ad6b19c803dd4b9e92bfa8d634b37c43f5a
+MISC ChangeLog 5872 SHA256 b59c7e95bfe8f30d1f119b0b07f508c2ddbea697a116323c5845352467ad56b9 SHA512 0201c269f1bdf6df2a0999c605f1186a140fd16eea5e9a842b07f0fbcf02e8324415073649ebfd188c1832240287a1716092b660a6c580ea21ff7efa0bf6658a WHIRLPOOL 3b4e2fc2824fd71687dcc788988243b62351d45cadfe0dcd7af2a98accab6c0c67031b7370722935b1dd90c1717cc1c95a39ce2d0cfddd0d631f2152185b681e
 MISC metadata.xml 235 SHA256 095e4ee6b3ae673e7ddf0d4e166a632d3384d6374c6dd86d8c401a8f5c43f7fe SHA512 52fe834d5150301a0247d32806e487fa9838f30eb94e3d6cc2f10f2b574e95a113accdd2dd4097c2033a0dfc6da06948a3ea6e13f593f038c0d0e9e13ecbfdf5 WHIRLPOOL e070f37f0eab35b3b21bba900e3d710592720cdcf57f02bd9dcc8f7af418a152c36b22022af50d40d7267b7bf041739031135d65e66c6e9b9b31597d920d4364
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUZY8kACgkQsAvGakAaFgDSAwCcDdYZzLEtDa7fhMk8CG3J4JQ5
-sfYAoIPZaR3hN27gi1zF2omgf9hKNYO4
-=BMXg
+iEYEAREIAAYFAlUZoXwACgkQsAvGakAaFgAwcACgsGGwdnQWX2jS4l1QzKYwkOpv
+mJEAnicn51SIVK131QJMDzmXE82s7X06
+=8UbQ
 -----END PGP SIGNATURE-----
