@@ -1,6 +1,15 @@
 # ChangeLog for dev-vcs/svn2git
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/svn2git/ChangeLog,v 1.23 2015/03/30 14:54:59 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/svn2git/ChangeLog,v 1.24 2015/03/30 19:18:14 sping Exp $
+
+  30 Mar 2015; Sebastian Pipping <sping@gentoo.org>
+  svn2git-0_pre20100303.ebuild, svn2git-0_pre20100324.ebuild,
+  svn2git-0_pre20100327.ebuild, svn2git-0_pre20101008.ebuild,
+  svn2git-0_pre20101101.ebuild, svn2git-1.0.2.1.ebuild,
+  svn2git-1.0.3_p1.ebuild, svn2git-1.0.4.ebuild, svn2git-1.0.5.ebuild,
+  svn2git-1.0.6.ebuild, svn2git-1.0.8-r1.ebuild, svn2git-1.0.10.ebuild,
+  svn2git-9999.ebuild:
+  Upstream moved from Gitorious to GitHub now (bug #544844)
 
   30 Mar 2015; Sebastian Pipping <sping@gentoo.org>
   svn2git-0_pre20100303.ebuild, svn2git-0_pre20100324.ebuild,
